force-app/main/default/objects/User_Progress__c/User_Progress__c.object-meta.xml
<CustomObject>
    <label>User Progress</label>
    <nameField>
        <displayFormat>UP- {000000}</displayFormat>
        <label>User Progress Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Users Progress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>