force-app/main/default/objects/User_Progress__c/fields/Workshop_Step__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workshop Step</label>
    <referenceTo>Workshop_Step__c</referenceTo>
    <relationshipLabel>Users Progress</relationshipLabel>
    <relationshipName>Users_Progress</relationshipName>
    <type>Lookup</type>
</CustomField>