force-app/main/default/objects/User_Progress__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsCompleted__c</columns>
    <columns>User__c</columns>
    <columns>Workshop_Step__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>